Initial project setup with essential configurations, including ESLint, Jest, TypeScript, and a sample Java project for LSP testing. Added .gitignore, package.json, and deployment documentation. Implemented LSP client and server interaction logic, along with integration and end-to-end tests for REST annotation discovery.